--- a/assets/templates/test-nw-version/index.html
+++ b/assets/templates/test-nw-version/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <script type="text/javascript" charset="utf-8">
-      console.log(process.versions["node-webkit"]);
+      process.stdout.write(process.versions["node-webkit"]);
     </script>
   </body>
 </html>
